--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <div class="item">
                     <p>teddy</p>
-                    <a href="https://www.youtube.com/watch?v=3DNxCN4gYa4&t=17s" target="_blank"><img src="teddy.png" width=300 height=300 width=50 height=50></a>
+                    <a href="https://www.youtube.com/watch?v=3DNxCN4gYa4&t=17s" target="_blank"><img src="teddy.png" width=300 height=300></a>
                 </div>
             </div>            
         </div>
