--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
 
                 <div class="item">
                     <p>chameleon</p>
-                    <a href="https://www.youtube.com/watch?v=4ecS9uCRHzo" target="_blank" ><img src="chameleon.png" width=300 height=300 width=50 height=50></a>
+                    <a href="https://www.youtube.com/watch?v=4ecS9uCRHzo" target="_blank" ><img src="chameleon.png" width=300 height=300 ></a>
                 </div>
             
                 <div class="item">
                     <p>cicada</p>
-                    <a href="https://www.youtube.com/watch?v=GvpgBXW0ERk" target="_blank" ><img src="cicada.png" width=300 height=300 width=50 height=50></a>
+                    <a href="https://www.youtube.com/watch?v=GvpgBXW0ERk" target="_blank" ><img src="cicada.png" width=300 height=300 ></a>
                 </div>
             </div>
 
             <div class="group">
                 <div class="item">
                     <p>panda</p>
-                    <a href="https://www.youtube.com/watch?v=nnZ61pDj5E4" target="_blank" ><img src="panda.png" width=300 height=300 width=50 height=50></a>
+                    <a href="https://www.youtube.com/watch?v=nnZ61pDj5E4" target="_blank" ><img src="panda.png" width=300 height=300></a>
                 </div>
            
                 <div class="item">
                     <p>pigeon</p>
-                    <a href="https://www.youtube.com/watch?v=Yp6gu7cLUGI" target="_blank" ><img src="pigeon.png" width=300 height=300 width=50 height=50></a>
+                    <a href="https://www.youtube.com/watch?v=Yp6gu7cLUGI" target="_blank" ><img src="pigeon.png" width=300 height=300 ></a>
                 </div>
 
                 <div class="item">
